# ICO_launchpad_profit_modelling

./: .replit  ROI_df.csv  ROI_df_may_18.csv  [do not use]_ico_data.csv  df_responses_head.csv  ico_data.csv  ico_data_may18.csv  launchpad_ico_mapping.csv  main.py  platform_coins.csv  pyproject.toml
configs/: fontlist-v330.json
